trunk/Archive2/f8/fe47906107dc7b/output
+ g++-4.8 -std=c++1y -O2 -Wall -pedantic -pthread -lboost_iostreams -lz main.cpp
main.cpp:1:9: error: 'boost' does not name a type
 typedef boost::variant<
         ^
